# pcl_indoorPlaneSegmentation

./: CMakeLists.txt  CMakeLists_backup.txt  README.md  concave_hull_2d.cpp  getPlaneNormalState.cpp  indoor_planar_segmentation.cpp  indoor_planar_segmentation_BACKUP.cpp  indoor_planar_segmentation_v2.cpp  matrix_transform.cpp  pc_visualizer.cpp  planar_segmentation.cpp  planeSegmentation.cpp  pointcloudSegmentation.cpp
config/: param.json
include/: getPlaneNormalState.h  paintPathPlanning.h  patchSegmentation.h  planeSegmentation.h  pointcloudSegmentation.h  struct.h  visualizer.h
others/: CMakeLists.txt
output/: ceiling_p0_1.pcd  floor_p3_0.pcd  wall_p0_0.pcd  wall_p1_0.pcd  wall_p1_1.pcd  wall_p2_0.pcd  wall_p3_1.pcd
output/10/: floor_p3_0.pcd  wall_p0_0.pcd  wall_p1_0.pcd  wall_p2_0.pcd  wall_p3_1.pcd
output/7/: ceiling_p0_1.pcd  wall_p0_0.pcd  wall_p2_1.pcd
pcd/: 1. corner with windows .pcd  10. Wall with small columns.pcd  2_Protuding_wall.pcd  3. Wall between two windows.pcd  4. Column between two windows.pcd  5. Wall and door.pcd  6. Wall and door (good).pcd  7. Wall between doors.pcd  8. Corners_with beams.pcd  9. Plain wall.pcd  dense-upright-27jun.pcd
ros_pkg_srv/: README.md
ros_pkg_srv/pictobot_perception/: CMakeLists.txt  CMakeLists_backup.txt  package.xml
ros_pkg_srv/pictobot_perception/msg/: PathTrace.msg  PathTraceArray.msg
ros_pkg_srv/pictobot_perception/src/: pointcloudSegmentation.cpp  waypointsGeneration_client.cpp  waypointsGeneration_server.cpp
ros_pkg_srv/pictobot_perception/srv/: WaypointsGeneration.srv
ros_pkg_srv/pictobot_perception_service/: CMakeLists.txt  package.xml
ros_pkg_srv/pictobot_perception_service/msg/: Num.msg
ros_pkg_srv/pictobot_perception_service/src/: patchSegmentation.cpp  planeSegmentation.cpp  pointcloudSegmentation.cpp  waypointsGeneration_client.cpp  waypointsGeneration_server.cpp
ros_pkg_srv/pictobot_perception_service/src/include/: pointcloudSegmentation.h
ros_pkg_srv/pictobot_perception_service/srv/: WaypointsGeneration.srv
src/: ceilPath.cpp  indoor_planar_segmentation.cpp  patchSegmentation.cpp  pathIntegrate.cpp  pc_visualizer.cpp  planeSegmentation.cpp  pointcloudSegmentation.cpp  visualizer.cpp  wallPath.cpp
src/include/: paintPathPlanning.h  planeSegmentation.h  pointcloudSegmentation.h
test/: cluster_extraction.cpp  normalEstimation.cpp  supervoxel_clustering.cpp
